2002/10/20  ***** v1.1.0 shipped *****

2002/10/10  fadden
    - changed behavior so that deleting all records is allowed

2002/10/09  fadden
    - added support for "bzip2" compression via libbz2
    - added ability to selectively disable compression methods
    - added "-m" flag to samples/launder so you can specify compression

2002/09/30  fadden
    - added support for "deflate" compression via zlib

2002/09/27  fadden
    - added support for 12-bit and 16-bit LZC (UNIX compress)

2002/09/26  fadden
    - added support for SQueezed files (both compress and expand)

2002/09/23  fadden
    - ran the code through valgrind; found and fixed some minor bugs

2002/09/20  fadden
    - pulled the sources out and started fiddling with them again
    - changed hard tabs to spaces

2000/05/22  ***** v1.0.1 shipped *****

2000/05/22  fadden
    - added workaround for buggy 140K DOS3.3 GSHK images

2000/05/18  ***** v1.0.0 shipped *****

2000/05/18  fadden
    - updated version information to indicate final release

2000/03/25  ***** v0.6.1 shipped *****

2000/03/25  fadden
    - Sheppy says Mac OS X PPC v1.02 and v1.2 work with minor SysDefs tweak

2000/03/05  ***** v0.6.0 (beta) shipped *****

2000/03/05  fadden
    - modified NuOpenRW to call mktemp or mkstemp if tmpPath looks like
      a template
    - removed DEBUG_MSGS from default CFLAGS
    - updated version information to indicate beta release

2000/02/24  ***** v0.5.1 shipped *****

2000/02/20  changes from Scott Blackman
    - portability fixes for DJGPP under Win95

2000/02/17  changes from Devin Reade
    - portability fixes for BSD, AIX, and others

2000/02/09  ***** v0.5.0 (alpha) shipped *****

2000/02/08  fadden
    - tweaked the BeOS/PPC config around a little
    - deleted some commas to make "gcc -pendantic" happy

2000/02/06  fadden
    - include @CFLAGS@ in case somebody wants to override them

2000/02/06  ***** v0.4.0b shipped *****

2000/02/06  fadden
    - added "install-shared" make target